Bug 1755458 - Use threadlocal shared WebGL context for accelerated canvas. r=lsalzman

Because ClientWebGLContext is single threaded, we need a different
SharedContext for each thread that an accelerated Canvas2D is created
for.

Differential Revision: https://phabricator.services.mozilla.com/D141116